--- a/index.html
+++ b/index.html
@@ -5,15 +5,32 @@
   </head>
   <body>
     <div class="container">
-      <h1>Joe Cool - IS 5315 Sec. #</h1>
+      <h1>Haodi's HW2 - IS 5315 Sec1. #</h1>
       <h2>What is Docker</h2>
-      <p>Your answer here. - list all sources you used.</p>
+      <p>Docker is a cloud container that enables to operate applications, webs, systems and etc... Developers don’t need to worry about system configurations. Docker is not exactly like virtual machine, it allows applications to ship and run without operating on the host computer. Instead of creating a whole virtual operating system, it boosts significant performance and reduces the size of the application.  
+
+      - Source: https://opensource.com/resources/what-docker.</p>
+
       <h2>What is Nginx</h2>
-      <p>Your answer here. - list all sources you used.</p>
+      <p>NGINX is open source software as a web server and HTTP proxy. It has the ability to reverse proxy, handle more than 10,000 simultaneous connections with a low memory footprint, reverse proxy with caching, name- and IP address-based virtual servers, rewrite and redirect URL, and many others. It was developed by Igor Sysoev and first published in 2004. It became popularized because of its high performance. 
+      
+      - Sources:
+      https://www.nginx.com/resources/glossary/nginx/
+      https://en.wikipedia.org/wiki/Nginx
+ </p>
       <h2>What is VM (virtual machine)</h2>
-      <p>Your answer here. - list all sources you used.</p>
+      <p>A virtual machine is an emulation of a computer system. It can run another operating system in one operating system, such as running a Linux system on a Windows system. A virtual machine creates an ideal environment for testing other operating systems and running software or applications on host operating systems. The virtual machine is a normal file in the host operating system, deleted if not needed without impacting on other parts. 
+
+      - Sources: 
+      https://en.wikipedia.org/wiki/Virtual_machine
+      https://azure.microsoft.com/en-us/overview/what-is-a-virtual-machine/ </p>
+
       <h2>Who is Cloud Computing Service Provider - Digitalocean</h2>
-      <p>Your answer here. - list all sources you used.</p>
+      <p>Digital ocean is an American cloud computing service provider with data centers across the world. It was founded in 2011 by Moisey Uretsky, Ben Uretsky, Jeff Carr, Alec Hartman, Mitch Wainer. Unlike AWS and Google Compute Engine, DigitalOcean provides an Infrastructure as a Service (IaaS) platform for software developers only to build applications in the cloud. DigtialOcean provides various sizes of virtual machines, or ‘Droplets’ as it refers, for users to operate. These services are running by geographical region and data center, like we use the one in San Francisco. These virtual machines allow developers to operate Linux system to execute Ubuntu, CentOS, Debian, Fedora, CoreOS, FreeBSD and Secure Shell (SSH). 
+
+      - Sources: 
+      https://searchcloudcomputing.techtarget.com/definition/DigitalOcean
+      https://en.wikipedia.org/wiki/DigitalOcean.</p>
     </div>
   </body>
 </html>
