--- a/hwgit.html
+++ b/hwgit.html
@@ -11,23 +11,26 @@
 
       Version control is a component of software configuration management, which manages changes of documents, computer programs, large web sites and other collections of information. Like Google drive and one drive applications, besides tracking and saving changes from coordinated users on documents, git with version control system embeds in various types of software and allows users to collaborate work together. We often use version control system to share codes, revert codes, track edits and correct mistakes as a group.
 
-       - Sources: 
+      \n- Sources: 
       https://www.atlassian.com/git/tutorials/what-is-git.
       https://en.wikipedia.org/wiki/Version_control</p>
 
 
-      <h2>b.  Describe following terms: 1) local repo 2) remote repo 3) how to use GIT in Team Project – multiple developers work on the same project at the same time</h2>
-      <p>1) A local repository is on one’s computer and has all the files and committed history, the user can review and track the changes, and upload/commit offline.
+      <h2>b.  Describe following terms: 1) local repo 2) remote repo 3) how to use GIT in Team Project </h2>
 
-      2) A remote repository is a centralized server that enables a team to commit files and changes, as well as review and track historical edits. Normally, one’s local repository can be a remote repository and the rest members in the team can push to commits to the remote repository from their local repo and pull others’ edits from remote repo to their local repo. 
+      <p>
+      1) A local repository is on one's computer and has all the files and committed history, the user can review and track the changes, and upload/commit offline.
 
-      3) a. The first step is to create a remote repo. Since we already created a local git repo in class, I’m using mine as an example. My team can use the commend line, $ git clone git@github.com:haoditu/5315.git, to make my local repo become remote repo. 
+      \n2) A remote repository is a centralized server that enables a team to commit files and changes, as well as review and track historical edits. Normally, one's local repository can be a remote repository and the rest members in the team can push to commits to the remote repository from their local repo and pull others' edits from remote repo to their local repo. 
+
+      \n3) a. The first step is to create a remote repo. Since we already created a local git repo in class, I'm using mine as an example. My team can use the commend line, $ git clone git@github.com:haoditu/5315.git, to make my local repo become remote repo. 
       b. Then use Putty to pull files from remote repo, using $ git pull origin master. 
       c. Make edits on their own IDEs. Use $ git add filename and $ git add . to add a new file. 
-      d. Push after all amendments, use $ git commit -m “write commit message” and $ git push. Changes will be uploaded in remote repo.
-      To avoid conflicts: 1. Always pull from remote repo before doing any edits; 2. Always push to remote repo after any edits. 
+      d. Push after all amendments, use $ git commit -m "write commit message" and $ git push. Changes will be uploaded in remote repo.
+      
+      \nTo avoid conflicts: 1. Always pull from remote repo before doing any edits; 2. Always push to remote repo after any edits. 
 
-      - Sources: https://www.intertech.com/Blog/introduction-to-git-concepts/.</p>
+      \n- Sources: https://www.intertech.com/Blog/introduction-to-git-concepts/.</p>
     </div>
   </body>
 </html>
