--- a/empjson.html
+++ b/empjson.html
@@ -10,22 +10,18 @@
     <table id="empTable" class="display" width="100%" cellspacing="0">
         <thead>
             <tr>
-                <th>Name</th>
-                <th>Designation</th>
-                <th>Office</th>
-                <th>Extension</th>
-                <th>Joining Date</th>
-                <th>Salary</th>
+                <th>ProductNumber</th>
+                <th>ProductName</th>
+                <th>RetailPrice</th>
+                <th>QuantityOnHand</th>
             </tr>
         </thead>
         <tfoot>
             <tr>
-                <th>Name</th>
-                <th>Designation</th>
-                <th>Office</th>
-                <th>Extension</th>
-                <th>Joining Date</th>
-                <th>Salary</th>
+                <th>ProductNumber</th>
+                <th>ProductName</th>
+                <th>RetailPrice</th>
+                <th>QuantityOnHand</th>
             </tr>
         </tfoot>
     </table>
@@ -40,12 +36,10 @@
         $('#empTable').dataTable({
             "ajax": "empdata.js",
             "columns": [
-                {"data": "name"},
-                {"data": "designation"},
-                {"data": "office"},
-                {"data": "extension"},
-                {"data": "joining_date"},
-                {"data": "salary"}
+                {"data": "ProductNumber"},
+                {"data": "ProductName"},
+                {"data": "RetailPrice"},
+                {"data": "QuantityOnHand"}
             ]
         });   
     });
