--- a/empxml.html
+++ b/empxml.html
@@ -18,12 +18,10 @@
             success: function(xml) {  
              $(xml).find('data').each(function(){  
               t.row.add( [
-                $(this).find('name').text(),
-                $(this).find('designation').text(),
-                $(this).find('office').text(),
-                $(this).find('extension').text(),
-                $(this).find('joining_date').text(),
-                $(this).find('salary').text()
+                $(this).find('ProductNumber').text(),
+                $(this).find('ProductName').text(),
+                $(this).find('RetailPrice').text(),
+                $(this).find('QuantityOnHand').text()
               ] ).draw( false );
              });
             }
@@ -36,23 +34,19 @@
   <table id="chart" class="display" cellspacing="0" width="100%">
     <thead>
         <tr>
-            <th>Name</th>
-            <th>Designation</th>
-            <th>Office</th>
-            <th>Extension</th>
-            <th>Joining Date</th>
-            <th>Salary</th>
+            <th>ProductNumber</th>
+            <th>ProductName</th>
+            <th>RetailPrice</th>
+            <th>QuantityOnHand</th>
         </tr>
     </thead>
 
     <tfoot>
         <tr>
-            <th>Name</th>
-            <th>Designation</th>
-            <th>Office</th>
-            <th>Extension</th>
-            <th>Joining Date</th>
-            <th>Salary</th>
+            <th>ProductNumber</th>
+            <th>ProductName</th>
+            <th>RetailPrice</th>
+            <th>QuantityOnHand</th>
         </tr>
     </tfoot>
   </table>
